--- a/frontend/sanjeevani-frontend/package.json
+++ b/frontend/sanjeevani-frontend/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
